--- a/HTML/archives.html
+++ b/HTML/archives.html
@@ -127,10 +127,10 @@
 
           <div class="main2">
             <div class="btn_useracc">
-              <button id="bck"><i class="fas fa-arrow-left"> BACK </i> </button>
-              <button class="enable_acc" id="enabled"><i class="fas fa-undo"> RETRIEVE </i> </button>
-              <!-- <button class="enable_acc" id="permanentlyDelete"><i class="fas fa-trash-alt"> DELETE</i></button> -->
-              
+              <button id="bckbtn"><i class="fas fa-arrow-left"></i> BACK </button>
+              <button class="enable_acc" id="enabledTourist"><i class="fas fa-undo"></i> RETRIEVE </button>
+              <!-- <button class="enable_acc" id="permanentlyDelete"><i class="fas fa-trash-alt"></i> DELETE </button> -->
+          
             </div>
 
                 <div class="outer-wrapper">
