--- a/HTML/prArchives.html
+++ b/HTML/prArchives.html
@@ -107,9 +107,9 @@
       <main class="main-container" id="blur">
         <div class="main2">
           <div class="btn_useracc">
-            <button id="bckbtn">Back</button>
-            <button class="enable_acc" id="enabledbtn">Retrieve</button>
-            <button class="enable_acc" id="permanentlyDelete"> Delete</button>
+            <button id="bckbtn"> <i class="fas fa-arrow-left"> </i> BACK</button>
+            <button class="enable_acc" id="enabledbtn"><i class="fas fa-undo"> </i> RETRIEVE</button>
+            <button class="enable_acc" id="permanentlyDelete"> <i class="fas fa-trash-alt"></i> DELETE </button>
             
           </div>
 
